...
          items: const [
            BottomNavigationBarItem(icon: Icon(Icons.home), label: 'Home'),
            BottomNavigationBarItem(icon: Icon(Icons.book), label: 'Recipes'),
            BottomNavigationBarItem(
                icon: Icon(Icons.food_bank), label: 'Donations'),
            BottomNavigationBarItem(
                icon: Icon(Icons.bar_chart), label: 'Statistics'),
          ],
        ),
        Positioned(
          left: width * 0.5 - 30,
          bottom: 30,
          child: Semantics(
...
